<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ll_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/app_name"
        app:titleTextColor="@color/white" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_usd"
        style="@style/TextView_black"
        android:layout_margin="10dp"
        android:text="$0.0"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_value1"
        style="@style/TextView_grey"
        android:layout_margin="10dp"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_usd"
        tools:text="@string/app_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_value2"
        style="@style/TextView_grey"
        android:layout_margin="10dp"
        android:textColor="@color/red"
        app:layout_constraintStart_toEndOf="@id/tv_value1"
        app:layout_constraintTop_toBottomOf="@id/tv_usd"
        tools:text="@string/app_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_today"
        style="@style/TextView_grey"
        android:layout_margin="10dp"
        android:text="@string/today"
        app:layout_constraintStart_toEndOf="@id/tv_value2"
        app:layout_constraintTop_toBottomOf="@id/tv_usd" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_logo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintStart_toEndOf="@id/tv_value2"
        app:layout_constraintTop_toBottomOf="@id/tv_value1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextView_grey"
                android:layout_marginHorizontal="10dp"
                android:text="@string/account_value"
                app:layout_constraintStart_toEndOf="@id/tv_value2"
                app:layout_constraintTop_toBottomOf="@id/tv_usd" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_qty"
                    style="@style/TextView_black"
                    android:layout_marginHorizontal="5dp"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toStartOf="@id/tv_symbol"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/app_name" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_symbol"
                    style="@style/TextView_black"
                    android:layout_marginHorizontal="5dp"
                    android:textAllCaps="true"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/app_name" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_asset_value"
                style="@style/TextView_grey"
                android:layout_marginHorizontal="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_symbol"
                tools:text="@string/app_name" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>